--- a/css/styles.css
+++ b/css/styles.css
@@ -3,7 +3,6 @@
     padding: 0px;
     list-style: none;
 }
-
 .clearfix{
     float: none;
     clear: both;
@@ -19,21 +18,21 @@ body{
     margin: 0px auto;
     margin-top: 30px;
     background: white;
-    padding: 20px;
+    padding: 25px;
     box-shadow: 0px 0px 2px gray;
 }
 
 #logo{
     font-family: Verdana, Arial;
-    font-size: 30px;
+    font-size: 28px;
     letter-spacing: 4px;
-    background: #235e3d;
+    line-height: 75px;
+    background: #235E3D;
     color: white;
     text-align: center;
-    width: 385px;
+    width: 389px;
     height: 80px;
     margin-bottom: 20px;
-    line-height: 75px;
     float: left;
     text-transform: uppercase;
 }
@@ -45,9 +44,8 @@ body{
     text-transform: uppercase;
     margin-bottom: 20px;
 }
-
 #menu ul{
-    line-height: 46px;
+    line-height: 46px;   
     list-style: none;
 }
 
@@ -58,10 +56,10 @@ body{
 }
 
 #menu ul li:hover{
-    background: #235e3d;
+    background: #235E3D;
 }
 
-#menu ul li a{
+#menu a{
     display: block;
     color: white;
     text-decoration: none;
@@ -69,32 +67,32 @@ body{
     padding-right: 30px;
 }
 
-#post{
+#posts{
     width: 60%;
     float: left;
-    font-family: Helvetica, Arial; 
+    font-family: Helvetica, Arial;
 }
 .post{
     padding: 7px;
-    
+    text-align: justify;
 }
-
 .post h2{
     font-size: 30px;
     color: #333;
+
 }
 
 .post .date{
     display: block;
     color: gray;
-    margin-top: 5px;
+    margin-top: 5px;  
 }
 
 .post p{
     margin-top: 10px;
     margin-bottom: 20px;
-    line-height: 22px;
-    text-align: justify;
+    line-height: 20px;
+
 }
 
 .button-more{
@@ -102,39 +100,75 @@ body{
     text-align: center;
     display: block;
     padding: 15px;
-    background: #235e3d;
-    color: white;
+    background: #235E3D;
+    color:white;
     text-decoration: none;
     margin-top: 10px;
     width: 70px;
-    float: auto;
+    float: left;
     margin-bottom: 20px;
 }
+
 #sidebar{
     font-family: Helvetica, Arial;
     width: 31%;
     float: right;
-
 }
 
 #sidebar h4{
-  margin-top: 50px;
-  margin-bottom: 20px;
-  text-align: center;
-  line-height: 10px;
-  color: #333;
-  background: url('../img/lines.png') repeat-x;
+    margin-top: 50px;
+    margin-bottom: 20px;
+    text-align: center;
+    line-height: 10px;
+    color: #333;
+    background: url('../img/lines.png') repeat-x;
 }
+
 #sidebar h4 span{
     background: white;
     padding: 5px;
 }
 
-#sidebar img{
-   width: 100%;
+#sidebar img {
+    width: 100%;
 }
 
-#sidebar p{
-   font-size: 15px;
-   text-align: justify;
-  }
+#sidebar p {
+    font-size: 15px;
+    text-align: justify;
+
+}
+
+form input[type="text"],
+form input[type="email"],
+form input[type="password"]
+{
+    padding: 5px;
+    border-radius: 1px;
+    border: 1px solid #ccc;
+    width: 80%;
+    margin-bottom: 10px;
+    margin-top: 5px;
+    
+}
+
+form input[type="submit"]{
+    background: ccc;
+    padding: 10px;
+    border: 1px solid #ccc;
+    color: #333;
+    cursor: pointer;
+}
+
+footer{
+    font-family: Helvetica,Arial;
+    color: white;
+    height: 47px;
+    background: rgba(51,51,51, 0.70);
+    margin:  0px auto;
+    width: 65%;
+    padding-left: 20px;
+    padding-right: 20px;
+    margin-top: 50px;
+    line-height: 47px;
+}
