--- a/css/styles.css
+++ b/css/styles.css
@@ -8,10 +8,6 @@
     clear: both;
 }
 
-body{
-    background: url('../img/hojas.jpg');
-    background-attachment: fixed;
-}
 
 #global{
     width: 65%;
@@ -27,7 +23,6 @@ body{
     font-size: 28px;
     letter-spacing: 4px;
     line-height: 75px;
-    background: #235E3D;
     color: white;
     text-align: center;
     width: 389px;
@@ -55,9 +50,6 @@ body{
     transition: all 300ms;
 }
 
-#menu ul li:hover{
-    background: #235E3D;
-}
 
 #menu a{
     display: block;
@@ -100,7 +92,6 @@ body{
     text-align: center;
     display: block;
     padding: 15px;
-    background: #235E3D;
     color:white;
     text-decoration: none;
     margin-top: 10px;
@@ -174,4 +165,44 @@ footer{
 }
 .bx-wrapper, .bx-viewport{
     height: 250px !important;
+}
+
+#select-theme{
+    position: fixed;
+    top: 40%;
+    background: rgba(51, 51, 51, 0.5);
+    width: 50px;
+    height: 100px;
+}
+
+#to-green,
+#to-red,
+#to-blue{
+    width: 25px;
+    height: 25px;
+    border: 1px solid white;
+    display: block;
+    margin: 0px auto;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    cursor: pointer;
+}
+
+#to-green{
+    background: #235e3d;
+}
+
+#to-red{
+    background: #ca3413;
+}
+
+#to-blue{
+    background: #1f87c4;
+}
+
+.up{
+    color: white;
+    text-decoration: none;
+    display: block;
+    float: right;
 }
