--- a/css/styles.css
+++ b/css/styles.css
@@ -68,10 +68,10 @@
     padding: 7px;
     text-align: justify;
 }
-.post h2{
+h2{
     font-size: 30px;
     color: #333;
-
+    font-family: Helvetica, Arial;
 }
 
 .post .date{
@@ -205,4 +205,14 @@ footer{
     text-decoration: none;
     display: block;
     float: right;
+}
+
+#box{
+    width: 60%;
+    float: left;
+    margin-top: 40px;
+}
+#acordeon {
+    margin-top: 20px;
+
 }
