--- a/css/styles.css
+++ b/css/styles.css
@@ -132,7 +132,8 @@ h2{
 
 form input[type="text"],
 form input[type="email"],
-form input[type="password"]
+form input[type="password"],
+select
 {
     padding: 5px;
     border-radius: 1px;
@@ -215,4 +216,37 @@ footer{
 #acordeon {
     margin-top: 20px;
 
+}
+
+#reloj{
+    font-size: 50px;
+    font-weight: bold;
+    font-family: Helvetica, Arial;
+    color: #333;
+    border: 5px dashed  #333;
+    width: 30%;
+    padding: 30px;
+    margin: 0 auto;
+
+}
+
+#form-contact{
+    width: 80%;
+    margin-top: 15px;
+    font-family: Helvetica, Arial;
+}
+
+#form-contact label {
+    width: 100%; 
+    display: block;
+    margin-top: 5px;
+}
+
+.form-error{
+    float: right;
+    font-size: 11px;
+    background: red;
+    color: white;
+    padding: 10px;
+    width: 65%;
 }
